alignment issues fixed

--- a/app/app.css
+++ b/app/app.css
@@ -206,13 +206,13 @@ button {
 
 .video_overlays {
     position: absolute;
-    width: 100%;
-    height:68%;
+    width: 70%;
+    height:85%;
     opacity: 1;
     z-index: 2;
-    left: 20%;
+    left: 0%;
     right: 0;
-    top:10%;
+    top:0%;
     text-align: center;
 }
 
@@ -220,14 +220,17 @@ button {
 #wrap_video {
     margin-left: 20%;
     margin-right: 20%;
+	position:absolute;
+	width:70%;
 }
 .videodiv{
-    width: 120%;
+    width: 70%;
     height:70%;
 }
 
 #MyVideo1 {
-    
+    width:100%;
+	height:100%;
 
 }
 
